Added forgot-reset password functionality

--- a/src/app/admin/components/dashboard/dashboard.component.html
+++ b/src/app/admin/components/dashboard/dashboard.component.html
@@ -37,6 +37,7 @@
           <div class="header-right">
             <app-search-bar
               [suggestions]="suggestions"
+              [isLoading]="isLoading"
               [labelKey]="'name'"
               [subLabelKey]="'packing'"
               (onType)="handleTyping($event)"
