--- a/src/app/user/components/dashboard/dashboard.component.html
+++ b/src/app/user/components/dashboard/dashboard.component.html
@@ -37,6 +37,7 @@
           <div class="header-right">
             <app-search-bar
               [suggestions]="suggestions"
+              [isLoading]="isLoading"
               [labelKey]="'product.name'" 
               [subLabelKey]="'product.packing'"
               (onType)="handleTyping($event)"
