--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -33,7 +33,7 @@
         <div class="form-group">
           <div class="label-row">
             <label for="password">Password</label>
-            <a href="#" class="forgot-link">Forgot?</a>
+            <a routerLink="/forgot-password" class="forgot-link">Forgot?</a>
           </div>
           <div class="input-wrapper">
             <span class="input-icon">🔒</span>
