--- a/src/app/shared/search-bar/search-bar.component.html
+++ b/src/app/shared/search-bar/search-bar.component.html
@@ -1,34 +1,35 @@
 <div class="search-wrapper" [class.expanded]="isExpanded">
-  <div class="search-container">
-    <!-- Search Input -->
-    <input 
-      type="text" 
-      class="search-input" 
-      [(ngModel)]="searchText" 
-      (input)="onInput()" 
-      (keyup.enter)="onEnter()"
-      (focus)="onFocus()"
-      placeholder="Search..."
-      [class.has-text]="searchText.length > 0">
+  <form (submit)="onFormSubmit($event)" action="javascript:void(0);">
+    <div class="search-container">
+      <input 
+        type="search" 
+        name="search"
+        enterkeyhint="search"
+        class="search-input" 
+        [(ngModel)]="searchText" 
+        (input)="onInput()" 
+        (focus)="onFocus()"
+        placeholder="Search..."
+        [class.has-text]="searchText.length > 0">
 
-    <!-- Search Icon Button -->
-    <button class="search-btn" (click)="toggleSearch()" type="button">
-      <fa-icon [icon]="faSearch"></fa-icon>
-    </button>
+      <div class="search-loader" *ngIf="isLoading && isExpanded">
+        <div class="spinner-micro"></div>
+      </div>
+      <button class="search-btn" (click)="toggleSearch()" type="button">
+        <fa-icon [icon]="faSearch" *ngIf="!isLoading || !isExpanded"></fa-icon>
+      </button>
 
-    <!-- Clear Button (when text exists) -->
-    <button 
-      class="clear-btn" 
-      *ngIf="searchText.length > 0 && isExpanded" 
-      (click)="clearSearch()"
-      type="button">
-      <fa-icon [icon]="faTimes"></fa-icon>
-    </button>
-  </div>
+      <button 
+        class="clear-btn" 
+        *ngIf="searchText.length > 0 && isExpanded" 
+        (click)="clearSearch()"
+        type="button">
+        <fa-icon [icon]="faTimes"></fa-icon>
+      </button>
+    </div>
+  </form>
 
-  <!-- Suggestions Dropdown -->
   <div class="dropdown-container" *ngIf="isExpanded">
-    <!-- Results -->
     <ul class="suggestion-dropdown" *ngIf="suggestions.length > 0">
       <li 
         *ngFor="let item of suggestions; let i = index" 
@@ -46,7 +47,6 @@
       </li>
     </ul>
 
-    <!-- No Results -->
     <ul class="suggestion-dropdown" *ngIf="searchText.length > 1 && suggestions.length === 0">
       <li class="no-results">
         <fa-icon [icon]="faSearchMinus"></fa-icon>
@@ -54,7 +54,6 @@
       </li>
     </ul>
 
-    <!-- Search Hint -->
     <div class="search-hint" *ngIf="searchText.length === 0">
       <fa-icon [icon]="faLightbulb"></fa-icon>
       <span>Start typing to search {{ notFoundText }}...</span>
