Added edit stock functionality

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -97,7 +97,7 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" 
-             routerLink="/user/add-stock" 
+             routerLink="/user/stock/add" 
              routerLinkActive="active"
              (click)="closeMobileMenu()">
             <fa-icon [icon]="faBoxes"></fa-icon>
