--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -82,4 +82,15 @@
       <button class="btn-primary-dark" routerLink="/register">Create Your Account</button>
     </div>
   </section>
+  <footer class="footer-section">
+    <div class="container">
+      <p class="footer-help">
+        Need help? Contact us at 
+        <a href="mailto:gstmedicose+support@gmail.com" class="footer-link">gstmedicose+support@gmail.com</a>
+      </p>
+      <p class="footer-copyright">
+        &copy; 2026 GST Medicose. All Rights Reserved.
+      </p>
+    </div>
+  </footer>
 </div>
